# netshit

./: Cargo.toml  README.md
netshit/src/: readext.rs
netshit/src/layer3/: arp.rs  mod.rs
src/: eth.rs  main.rs
src/layer3/: ipv4.rs  mod.rs
stopgap/: Cargo.toml
stopgap/src/: catcher.rs  main.rs  server.rs
virtser/: CREDIT  Cargo.toml
virtser/src/: error.rs  lib.rs
